准备重新开发新的stock_analyzer模块.

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,16 @@ BATCH_SIZE=100000
 DASHSCOPE_API_KEY=your_dashscope_api_key
 DASHSCOPE_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 
+# DeepSeek API Configuration (用于 Step2 ReviewAgent)
+DEEPSEEK_API_KEY=your_deepseek_api_key
+DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
+
+# Search Provider Configuration (用于 Step1 web_search 工具)
+# 至少配置一个搜索服务，如果主服务失败会自动回退到备用服务:
+# - SERPER_API_KEY: Google Serper.dev 搜索服务 (推荐，支持中文)
+# - TAVILY_API_KEY: Tavily AI 搜索服务
+# 要切换搜索服务，修改 analysis_llm/config.py 中的 SEARCH_PROVIDER 参数
+SERPER_API_KEY=your_serper_api_key
 TAVILY_API_KEY=your_tavily_api_key
 
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
