--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Bulk data loader for A-share 1-minute data"
 requires-python = ">=3.10"
 dependencies = [
     "agent-framework==1.0.0b260130",
+    "akshare>=1.18.22",
     "dashscope>=1.20.0",
     "httpx[socks]>=0.28.1",
     "mplfinance>=0.12.7",
