--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "fin_analysis_loader"
 version = "0.1.0"
 description = "Bulk data loader for A-share 1-minute data"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "agent-framework==1.0.0b260130",
     "akshare>=1.18.22",
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=1.24.0",
     "openai>=2.16.0",
     "pandas>=2.3.3",
+    "pandas-ta>=0.3.14b0",
     "pillow>=12.1.0",
     "psycopg2-binary>=2.9.11",
     "psycopg[binary]>=3.0.0",
@@ -32,3 +33,7 @@ dev = [
     "pytest-asyncio>=0.25.0",
     "pytest-mock>=3.15.0",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+asyncio_mode = "strict"
